AC_PREREQ([2.69])
AC_INIT([volans], [0.2-dev], [http://github.org/halderen/volans/])
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_MACRO_DIR([m4])
AC_USE_SYSTEM_EXTENSIONS
LT_INIT
ACX_PREFIXHACK
AC_CONFIG_SRCDIR([volans.c])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC

dnl CHECK_COMPILER_FLAG(std=c99, [C99FLAG="-std=c99"])
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])
AC_CHECK_FUNCS([strrchr])
ACX_CUNIT
ACX_PEDANTIC
ACX_STRICT
AX_C___ATTRIBUTE__
AM_PROG_CC_C_O

AM_CONDITIONAL([WITH_CUNIT], [test "${with_cunit}" != "no" -a -n "$CUNIT_LIBS"])
AX_LIB_SQLITE3
AX_LIB_MYSQL()
ACX_LDNS(1,6,17)

ACX_LIBMICROHTTPD
ACX_LIBJANSSON
LIBCURL_CHECK_CONFIG

AM_CONDITIONAL([USE_MYSQL],[grep HAVE_MYSQL confdefs.h > /dev/null])
AM_CONDITIONAL([USE_SQLITE3],[grep HAVE_SQLITE3 confdefs.h > /dev/null])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
